# alphafold-analyser

./: LICENSE  README.md  README.txt  alphafold-analyser.py  alphafold_analyser_submit.sh  pyproject.toml  requirements.txt
src/alphafold_analyser/: __main__.py  paint_protein.py  plot_pae.py  plot_plddt.py  utils.py
